# Ml

./: .gitignore
py_src/: check_device.py  pyproject.toml
py_src/project/cifar10/: README.md  config.py  data_work.py  main.py  model_test.py  model_train.py  pyproject.toml  requirements.txt
py_src/project/cifar10/net/: CNN.py
py_src/project/rag_fst/: .env.template  config.py  docker-compose.yaml  main.py
py_src/project/rag_fst/chains/: langchains.py
py_src/project/rag_fst/work_data/: README.md  __init__.py  extract_pdf.py  models.py  qdrant_connect.py  vectorize.py  work_data_config.py  work_data_tool.py
